<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="419dp"
        android:layout_height="396dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="220dp"
        app:srcCompat="@drawable/koala" />

    <Button
        android:id="@+id/button"
        android:layout_width="109dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="567dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="104dp"
        android:text="@string/goto2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="226dp"
        android:layout_marginTop="566dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="107dp"
        android:text="@string/goto3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="667dp"
        android:text="@string/in1"
        android:textSize="18sp" />
</RelativeLayout>